# add_executable(Fibonacci Fibonacci.cpp) 
# add_executable(FibonacciRec FibRecursion.cpp)
# add_executable(workwithfiles WorkWithFiles.cpp)
# add_executable(ReverseString ReverseString.cpp)
# add_executable(CustomGL CustomGetLineTest.cpp)
# add_executable(DayCalc DayCalculator.cpp)
# add_executable(ASCII_Art ASCIIart.cpp)
add_executable(Game Game.cpp)
add_executable(Lines Radar.cpp)